' These are the statuses a transaction will through once it has been received by the main banking service
' Deposit = Another bank is sending money to us
' Payment = we have to send money to another bank
@startuml
' A transaction is marked as new when received.
[*] --> New

' Payments are marked as accepted when the customer has funds
' Deposits are marked as accepted just before the sending bank is notified of successful capture of the funds
New --> Accepted : Acceptance criteria met.

' Payments are visible immediately
' Deposits are only visible if the sending bank responded with success of the receipt of the funds
'          If the response was an error the deposit stays in accepted and will be retried at a schedule
'          a set number of times after which the issue is escalated with bank manager.
Accepted --> Visible : The transaction should be visible in customer account balance

' Transaction declined, a rejection reason is communicated back to initiator.
New --> Rejected : Acceptance conditions not met

' Payments are marked as verified when the receiving bank has confirmed receipt of the funds.
'   If the funds cannot be routed to a receiving bank. The notes are returned back into
'   our bank and the customer account is credited to reverse the payment.
' After being marked as visible, deposits immediately become verified.
Visible --> Verified : The other bank has confirmed successful capture of the payment into it

' The other bank failed to verify successful capture of a payment into it.
' If PAYMENT the user's funds are reversed.
Visible --> Reversed : Verification failed. Reverse Payments.
Reversed --> [*]
Rejected --> [*]
Verified --> [*]
@enduml